fix-style: fix details collapse in responsive

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -26,11 +26,14 @@ a:visited {
 body {
   margin: 0;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 #root {
   width: 100%;
+  height: 100dvh;
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
@@ -80,6 +83,7 @@ h1 {
 }
 
 .footer {
+  margin-top: auto;
   background-color: black;
   padding-block: 66px 29px;
   display: flex;
@@ -520,16 +524,6 @@ img {
 .collapse {
   width: fit-content;
 }
-@media (max-width: 576px) {
-  .collapse {
-    height: 30px;
-  }
-}
-@media (max-width: 576px) {
-  .collapse_details {
-    height: 100%;
-  }
-}
 .collapse_details.collapse_details[open] .collapse_details_summary::after {
   transform: rotate(180deg);
   transition: transform ease-in-out 500ms;
@@ -541,10 +535,11 @@ img {
   padding: 10px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 @media (max-width: 576px) {
   .collapse_details_summary {
-    height: 100%;
+    height: 30px;
   }
 }
 .collapse_details_summary::-webkit-details-marker {
