--- a/src/assets/sass/base/_normalize.scss
+++ b/src/assets/sass/base/_normalize.scss
@@ -24,11 +24,14 @@ a{
 body {
   margin: 0;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 #root{
   width: 100%;
+  height: 100dvh;
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
