--- a/src/assets/sass/components/_collapse.scss
+++ b/src/assets/sass/components/_collapse.scss
@@ -1,12 +1,6 @@
 .collapse{
   width: fit-content;
-  @include media-inferior($breakpoints-s){
-    height: 30px;
-  }
   &_details{
-    @include media-inferior($breakpoints-s){
-      height: 100%;
-    }
     &.collapse_details[open] {
       .collapse_details_summary::after {
         transform: rotate(180deg);
@@ -20,8 +14,9 @@
       padding: 10px;
       display: flex;
       justify-content: space-between;
+      align-items: center;
       @include media-inferior($breakpoints-s){
-        height: 100%;
+        height: 30px;
       }
       &::-webkit-details-marker{
         display: none;
