--- a/src/assets/sass/layouts/_footer.scss
+++ b/src/assets/sass/layouts/_footer.scss
@@ -1,4 +1,5 @@
 .footer{
+  margin-top: auto;
   background-color: black;
   padding-block: 66px 29px;
   display: flex;
